@@ -1,5 +1,12 @@
 2007-12-03  Akim Demaille  <demaille@gostai.com>
 
+	1e2.
+	* src/parser/bison/utoken.l: Support the scientific notation.
+	* src/uvalue.cc: Stop using the fixed format.
+	* NEWS: Doc it.
+
+2007-12-03  Akim Demaille  <demaille@gostai.com>
+
 	1+2*3 = 7.
 	* src/uvalue.cc (echo): Don't use %f to avoid issuing useless
 	zeros.
